# haotzar

./: .gitignore  CHANGELOG-TAURI-SUPPORT.md  DEBUGGING-SETUP.md  DEBUGGING.md  DEVELOPER_GUIDE.md  INNO-SETUP-GUIDE.md  LICENSE  MOBILE-SETUP.md  PDF-FIX-SUMMARY.md  PLATFORM-SUPPORT.md  PLUGINS-GUIDE.md  README.md  REFACTORING_SUMMARY.md  TAURI-DEVTOOLS-TEST.md  TAURI-ERRORS-FIXED.md  TROUBLESHOOTING.md  build-installer.cmd  index.html  installer.iss  package-lock.json  package.json  test-pdf-fix.md  vite.config.js  באגים.md
.github/workflows/: README.md  build-debug.yml  build-inno.yml  build.yml  deploy-pages.yml  tauri-build.yml
data.ms/: instance-uid
data.ms/auth/: data.mdb  lock.mdb
data.ms/tasks/: lock.mdb
electron/: main.js  preload.js  scanWorker.js
event-manager-plugin/: eventManager.js  index.html  manifest.json  styles.css
example-plugin/: README.md  index.html  manifest.json  script.js  style.css
meilisearch/אינדקס מהיר/: BUILD-INSTRUCTIONS.md  INDEX_DOCUMENTATION.md  README.md  build-indexer.cmd  build-indexer.sh  create_books_index.py  create_lines_index.py  create_pdf_pages_index.py  gui_pdf_indexer.py  indexer.py  (+2 more)
scripts/: build-inno-installer.js  tools.js  verify-dist.js  verify-pdf-build.js
src/: App.backup.jsx  App.css  App.jsx  App.refactored.jsx  App_temp.jsx  PDFViewer.jsx  SearchPage.css  SearchPage.jsx  Settings.css  Settings.jsx  TabsDropdown.css  TextViewer.css  TextViewer.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
(+102 files in other folders)
